--- a/app1/ex1/ex1-1.html
+++ b/app1/ex1/ex1-1.html
@@ -29,7 +29,10 @@
 	document.getElementById("Button1").addEventListener('click',readTab);
 
 	function readTab(){
-				//TODO
+		var info = JSON.parse(CD);
+		for(i in info){
+            console.log(i + ": " + info[i]);
+	}
 	}
   
 </script>
