--- a/app1/ex2/ex2-3-1.html
+++ b/app1/ex2/ex2-3-1.html
@@ -18,8 +18,8 @@
     // au chargement de la page
     //window.onload = loadDoc();
     // when page is ready, initialize the map!
-    google.maps.event.addDomListener(window, 'load', loadDoc());
-    var markers;
+    google.maps.event.addDomListener(window, 'load', loadDoc);
+    var markers = [];
 
     // Ajax avec JQuery
     function loadDoc() {
