--- a/app1/ex3/ex3-2.html
+++ b/app1/ex3/ex3-2.html
@@ -1,83 +1,76 @@
-<!DOCTYPE html >
+<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>JRostand stade reperes</title>
+<meta charset="utf-8">
+<title>JRostand Stade Repères</title>
+<style>
+  #map { height: 500px; width: 100%; }
+  .infowindow-content {
+    font-family: Arial, sans-serif;
+    font-size: 14px;
+}
+</style>
 </head>
 <body>
 
-<h1>JRostand Reperes Stade</h1>
+<h1>JRostand Repères Stade</h1>
 <hr>
-<div id="map">...</div>
+<div id="map"></div>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7Y32T_PJHZxYcK3BJYJFNwSl6cuvLXpo"></script>
 
-<script   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7Y32T_PJHZxYcK3BJYJFNwSl6cuvLXpo&callback=initMap"></script>
-<script  src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
+function initMap() {
+    $.getJSON("markersJrostand.json", function(data) {
+        if (!data || !data.length) {
+            console.error("JSON vide ou non chargé !");
+            return;
+        }
 
-    // au chargement de la page
-    //window.onload = loadDoc();
-    // when page is ready, initialize the map!
-    google.maps.event.addDomListener(window, 'load', loadDoc());
-    var markers;
+        const map = new google.maps.Map(document.getElementById("map"), {
+            center: { lat: data[0].lat, lng: data[0].lng },
+            zoom: 15
+        });
 
-    // Ajax avec JQuery
-    function loadDoc() {
-        $.ajax({
-                url: "markersJrostand.json",
-                method: "GET",
-                //data: { id : menuId },
-                dataType: "json",
-                success: function(dataMarkers){
-                            markers = dataMarkers;
-                            for(let i = 0; i < markers.length;i++){
-                                let marker = markers[i];
-                                for(key in markers[i]){
-                                    console.log(key + ":" + marker[key]);
-                                }
-                                console.log("____________");
-                            }
-                            initMap();
-                        }
-            }
-        );
-    }
+        const infoWindow = new google.maps.InfoWindow()
+        
 
-   function initMap(){
-       var options = {
-           center: new google.maps.LatLng(48.95930033308523, 2.5477890651742516),
-           zoom: 15,
-           mapTypeId: google.maps.MapTypeId.ROADMAP
-       };
+        data.forEach(item => {
+            const marker = new google.maps.Marker({
+                position: { lat: item.lat, lng: item.lng },
+                map: map,
+                title: "Marker " + item.id
+            });
 
+            marker.addListener('click', function() {
+                const contentString = `
+                    <div class="infowindow-content">
+                        <h3>Repère n°${item.id}</h3>
+                        <p>Latitude : ${item.lat}</p>
+                        <p>Longitude : ${item.lng}</p>
+                    </div>
+                `;
+                infoWindow.setContent(contentString);
+                infoWindow.open(map, marker);
+            });
+        });
 
-        /*****   Markers  *****/
+        const polyline = new google.maps.Polyline({
+            path: data.map(m => ({ lat: m.lat, lng: m.lng })),
+            geodesic: true,
+            strokeColor: "#FF0000",
+            strokeOpacity: 1.0,
+            strokeWeight: 2
+        });
+        polyline.setMap(map);
+    }).fail(function(err) {
+        console.error("Erreur chargement JSON :", err);
+    });
+}
 
-       var map = new google.maps.Map(document.getElementById("map"), options);
-
-       // On positionne les marqueurs sur la carte
-       for (let i = 0; i < markers.length; i++) {
-           let latlng = markers[i];
-           new google.maps.Marker({
-               position: latlng,
-               map : map
-           });
-       }
-
-       /**** Polylines *****/
-       const flightPath = new google.maps.Polyline({
-           path: markers,
-           geodesic: true,
-           strokeColor: "#FF0000",
-           strokeOpacity: 1.0,
-           strokeWeight: 2,
-       });
-       flightPath.setMap(map);
-    }
-
-
+$(document).ready(initMap);
 </script>
-
 
 </body>
 </html>
