Courses ajoutées dans le site de running

--- a/app1/siteRunning/evenement.html
+++ b/app1/siteRunning/evenement.html
@@ -1,67 +1,116 @@
-<!-- https://docs.emmet.io/cheat-sheet/ -->
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/evenement.css">
-    <title>Running</title>
-  </head>
-  <body>
-    <div id="overlay"></div>
-    
-    <!-- Menu Pour Mobile -->
-    <div id="mobile-menu" class="mobile-main-menu">
-      <ul>
-        <li><a href="#">Mission</a></li>
-        <li><a href="#">Shop</a></li>
-      </ul>
-    </div>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Événements Running - Courses</title>
+  <link rel="stylesheet" href="css/evenement.css" />
+  <style>
+    #map { height: 500px; width: 100%; margin-top: 20px; }
+    .infowindow-content { font-family: Arial, sans-serif; font-size: 14px; color: black; }
+    body { background-color: white; color: black; font-family: Arial, sans-serif; padding: 20px; }
+    select { font-size: 16px; padding: 5px; }
+  </style>
+</head>
+<body>
 
-    <!-- Header et Menu-->
-    <header class="main-header">
-      <div class="logo">
-       <!-- TODO  -->
-      </div>
-      <nav class="desktop-main-menu">
-        <ul>
-          <li><a href="index.html">Acceuil</a></li>
-          <li><a href="#section-inscri">Évenement</a></li>
-          <li><a href="#section-guide">Guide d'entraînement</a></li>
-          <li><a href="#section-equi">Équipement</a></li>
-          <li><a href="#section-nutri">Nutrition</a></li>
-        </ul> 
-      </nav>
-    </header>
+  <h1>Choisissez une course à afficher</h1>
+  <select id="courseSelect">
+    <option value="">-- Sélectionnez une course --</option>
+  </select>
 
-    <!-- Hamburger Menu -->
-    <button id="menu-btn" class="hamburger" type="button">
-      <span class="hamburger-top"></span>
-      <span class="hamburger-middle"></span>
-      <span class="hamburger-bottom"></span>
-    </button>
+  <div id="map"></div>
 
-    <div class="imgParis">
-        <img src="../img/pont.jpeg" alt="Image de Paris">
-    </div>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7Y32T_PJHZxYcK3BJYJFNwSl6cuvLXpo"></script>
+  <script>
+    let map;
+    let markers = [];
+    let polyline;
+    let infoWindow;
 
-    <div class="titre">Les événements pour le running</div>
+    function initMap() {
+      map = new google.maps.Map(document.getElementById("map"), {
+        center: { lat: 48.9593, lng: 2.5477 },
+        zoom: 14
+      });
+      infoWindow = new google.maps.InfoWindow();
 
-    <h2>Les Événements de Running à Ne Pas Manquer !</h2><br>
-    <p>Le running est plus qu'un simple sport, c'est une véritable aventure. Que vous soyez un coureur débutant ou un marathonien expérimenté,<br> 
-      il existe une multitude d'événements de course à pied à travers le monde, chacun offrant ses propres défis et opportunités.<br>
-      Que vous soyez à la recherche de nouvelles expériences ou simplement de repousser vos limites, il n'y a pas de meilleure manière de se motiver que de participer à un événement.<br>
-      <br>
-      Course à pied, marathon, ultra-marathon, course de relais... il existe une grande variété d'événements qui peuvent répondre à vos attentes, tout en vous permettant de découvrir de nouveaux horizons,<br>
-      de nouveaux parcours et de rencontrer d'autres passionnés. Vous trouverez toutes les informations sur ce <a href="https://www.finishers.com/ou-courir/europe/france/ile-de-france/paris/paris-2">site.</a></p>
+      fetch('courses.json')
+        .then(response => response.json())
+        .then(data => {
+          const select = document.getElementById('courseSelect');
 
-    <h2>Inscrivez-vous Dès Maintenant pour un Marathon Inoubliable à Paris !</h2><br>
-    <p>Si vous cherchez une occasion de courir dans l'une des plus belles villes du monde, ne manquez pas cette chance ! Participez à notre course au bord de la Seine,<br>
-      où vous aurez la possibilité de découvrir la capitale sous un autre angle. Imaginez courir le long des quais, avec des vues splendides sur la Seine,<br>
-      tout en passant par des lieux emblématiques de Paris. Cette course est bien plus qu'un simple marathon, c'est une véritable aventure dans l'une des villes les plus iconiques du monde !
-      Pour vous inscrire vous n'avez qu'a cliquer <a href="inscription.html">ici.</a></p><br>
+          // Remplir le menu déroulant avec les courses
+          data.forEach(course => {
+            const option = document.createElement('option');
+            option.value = course.id;
+            option.textContent = course.name;
+            select.appendChild(option);
+          });
 
-  </body>
+          // Quand on change la sélection
+          select.addEventListener('change', () => {
+            const selectedId = parseInt(select.value);
+            const course = data.find(c => c.id === selectedId);
+
+            if (!course) {
+              clearMap();
+              return;
+            }
+            displayCourse(course);
+          });
+        })
+        .catch(err => console.error('Erreur chargement courses.json:', err));
+    }
+
+    function clearMap() {
+      markers.forEach(m => m.setMap(null));
+      markers = [];
+      if(polyline) {
+        polyline.setMap(null);
+        polyline = null;
+      }
+      infoWindow.close();
+    }
+
+    function displayCourse(course) {
+      clearMap();
+
+      const path = course.markers.map(m => ({ lat: m.lat, lng: m.lng }));
+      
+      // Recentrer la map sur le premier point
+      if(path.length > 0) {
+        map.setCenter(path[0]);
+      }
+
+      // Ajouter markers
+      course.markers.forEach((point, index) => {
+        const marker = new google.maps.Marker({
+          position: { lat: point.lat, lng: point.lng },
+          map: map,
+          label: `${index + 1}`
+        });
+
+        marker.addListener('click', () => {
+          infoWindow.setContent(`<div class="infowindow-content"><strong>${course.name} - Point ${index + 1}</strong><br>Lat: ${point.lat}<br>Lng: ${point.lng}</div>`);
+          infoWindow.open(map, marker);
+        });
+
+        markers.push(marker);
+      });
+
+      // Tracer la polyline
+      polyline = new google.maps.Polyline({
+        path: path,
+        geodesic: true,
+        strokeColor: "#FF0000",
+        strokeOpacity: 1.0,
+        strokeWeight: 3
+      });
+      polyline.setMap(map);
+    }
+
+    window.onload = initMap;
+  </script>
+</body>
 </html>
